# IFEM-archive

./: #VersionNote#.txt  .gitattributes  .hypo_prepare_solid.fi.swp  .solid_update.f90.swo  .solve_laplace.f90.swp  .solve_solid_disp.f90.swp  .source_laplace.f90.swp  BLOCK.F90  B_Spline.f90  B_Spline1.f90  B_Spline_0order.f90  B_Spline_1order.f90  B_Spline_2order.f90  B_Spline_inter.f90  CMakeCache.txt  CMakeLists.txt  CORRECT.F90  EQUAL.F90  FACEMAP.F90  FORM.F90  GMRES.F90  HYPO.F90  IFEM.imrkpm.pa.3  IFEMfluiddeformable.dsp  IFEMfluiddeformable.dsw  IFEMfluiddeformable.opt  IFEMfluiddeformable.plg  LENGTH.F90  MAIN.DSP  MAIN.PLG  Makefile  Makefile.save  NORM.F90  NOTES.TXT  NOTICE  NoSlip.f90  POST.f  README.TXT  README.md  R_COMMON.F90  (+833 more)
10x1x1 cube/: input_fluid.in  mien.in  mrng.in  mxyz.in
1hard/: vel_time_rigid.asv
1hardsphere/: coortable.in  fluid.in  solid_variables.f90
1rigidsphere/: coortable.in  fluid.in  mien_solid.in  mxyz_solid.in
1softsphere/: fluid.in
1x1x1 cube/: mien.in  mrng.in  mxyz.in
20softspheres/: coortable.in  fluid.in  mien_solid.in  mxyz_solid.in
2dcyl_bc/: input_fluid.in  mien.in  mxyz.in
2dcyl_nobc/: TestMPI.sh  input_fluid.in  mrng.in  partele.in  partnode.in
2dlip/: input_fluid.in  input_solid.in  mien_solid.in
2dlip_hfq/: connectsolid.in  input_fluid.in  input_solid.in  partele.in  pre_part
2dplate/: input_fluid.in  input_solid.in  mxyz_solid.in  partele.in  partele_solid.in  partnode.in  partnode_solid.in  pre_part  sbc_solid.in  sbcnode_solid.in
2dplate_large/: TestMPI.sh  connectsolid.in  input_fluid.in  input_solid.in  mien.in  mien_solid.in  mrng.in  mxyz.in  partele.in  partele_solid.in  partnode.in  partnode_solid.in  pre_part
2hardspheres/: coortable.in  fluid.in
3D_test/: connectsolid.in  input_fluid.in  input_inter.in  input_solid.in  (+3 more)
misc/testrun/: CMakeLists.txt  Makefile  mars.c  mars.cpp
(+1520 files in other folders)
